# CL

./: .gitignore  CMakeLists.txt  README.md  cool_string_sum.calc
scripts/: bhaskara_sin.calc  bsin_test.calc  calling.calc  const.calc  control_flow.calc  dyn_fibo.calc  fibo.calc  function_result_indexing.calc  k.calc  multiple_envs.calc  pi_approx.calc  print_function_reprs.calc  prop.calc  test_imports.calc  velcity.calc
src/: args_parser.h  ast_evaluator.cpp  ast_evaluator.hpp  bytecode_runner.cpp  bytecode_runner.hpp  commons.cpp  commons.hpp  dictionary.cpp  dictionary.h  environment.cpp  environment.hpp  exceptions.hpp  function_callable.hpp  helpers.h  iterable.hpp  lexer.cpp  lexer.hpp  main.cpp  nodes.hpp  object.cpp  object.h  object_descriptor.cpp  object_descriptor.h  parser.cpp  parser.hpp  program.cpp  program.h  script.cpp  script.h  stack_based_evaluator.hpp  std_lib.cpp  std_lib.hpp  string_visitor.cpp  string_visitor.hpp  test_all.calc  tokens.cpp  tokens.hpp  value.cpp  value.hpp  vm_ast_evaluator.cpp  (+1 more)
src/tests/: language_tests.cpp  main.cpp
